Revision history for {{$dist->name}}

{{$NEXT}}

0.093350  2009-12-01 06:58:48 America/New_York
          added Config::MVP::Reader::Hash for use by adapter writers

0.093330  2009-11-29 17:40:08 America/New_York
          rebuild to include META.yml for sake of cpandeps scanner

0.093120  2009-11-08
          add missing prereq

0.093000  2009-10-27
          bundles for Assembler::WithBundles can now be nested

0.092990  2009-10-26
          add Config::MVP::Reader and associated packages, from Dist::Zilla

0.092360  2009-08-24
          add "begin_section" and "end_section" methods, mostly for wrapping
          with extra behavior in subclasses

0.092211  2009-08-09
          much more documentation yet again

0.092210  2009-08-09
          package interrogation (for mvp_* settings) is now done in Section
            initialization; this means you don't need to use the Assembler to
            benefit from this feature

          much more documentation
