@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          the alias attr on Section is now lazy so that mvp_aliases is called
 
 0.093350  2009-12-01 06:58:48 America/New_York
           added Config::MVP::Reader::Hash for use by adapter writers
